--- a/index.html
+++ b/index.html
@@ -94,6 +94,90 @@
   <!--end header of the website-->
     <h1>Hello, world!</h1>
 <!--body-->
+<body>
+  <!-- start of slider section -->
+  <section>
+    <!-- testimoniual slider still to be modified -->
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+ <ul class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+  </ul>
+
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="http://placehold.it/48x48" >
+      <div class="carousel-caption">
+    <h3>Los Angeles</h3>
+    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic </p>
+    <div class = "container">
+      <div class="row">
+      <div class="col-9"><img class= "col-sm-6" src="http://placehold.it/150x100" ></div>
+      <div class="col-3">
+      <div>Persons name</div>
+      <div>skills</div>
+      </div>
+    </div>
+    </div>
+  </div>
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="http://placehold.it/48x48" >
+      <div class="carousel-caption">
+    <h3>Los Angeles</h3>
+    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic </p>
+    <div class = "container">
+      <div class="row">
+      <div class="col-9"><img class= "col-sm-6" src="http://placehold.it/150x100" ></div>
+      <div class="col-3">
+      <div>Persons name</div>
+      <div>skills</div>
+      </div>
+    </div>
+  </div>
+    </div>
+  </div>
+</div>
+
+
+<br>
+
+<!-- team slider still to be completed -->
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+ <ul class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+  </ul>
+
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img  src="http://placehold.it/48x48" >
+    <h3>Member name</h3>
+    <p>person post</p>
+  
+  </div>
+    </div>
+    <div class="carousel-item">
+      <img src="http://placehold.it/150x100" >
+      <div class="carousel-caption">
+    <h3>Los Angeles</h3>
+    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic </p>
+   <div>
+      <img  src="http://placehold.it/150x100" >
+      <div>
+      <div>Persons name</div>
+      <div>skills</div>
+      </div>
+    </div>
+  </div>
+    </div>
+  </div>
+</div>
+
+
+  </section>
+  <!-- end of slider section -->
+</body>
 
 
 
